--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <p>
             Status report, análises, resultados de treinamento e auditorias.
           </p>
-          <a href="relatorio.html">Abrir relatório →</a>
+          <a href="status.html">Abrir relatório →</a>
         </div>
 
         <div class="doc">
@@ -184,7 +184,7 @@
           <p>
             Boas práticas, critérios de anotação e padronização para datasets YOLO.
           </p>
-          <a href="guia-rotulagem.html">Abrir guia →</a>
+          <a href="guiaRotulagem.html">Abrir guia →</a>
         </div>
 
       </div>
