--- a/index.html
+++ b/index.html
@@ -180,11 +180,18 @@
         </div>
 
         <div class="doc">
-          <h3>Guia de Rotulagem</h3>
+          <h3>Guia de Rotulagem Geral</h3>
           <p>
             Boas práticas, critérios de anotação e padronização para datasets YOLO.
           </p>
           <a href="guiaRotulagem.html">Abrir guia →</a>
+        </div>
+       <div class="doc">
+          <h3>Guia de Rotulagem Veículos</h3>
+          <p>
+            Boas práticas, critérios de anotação e padronização para datasets YOLO.
+          </p>
+          <a href="guiaRotulagemCarro.html">Abrir guia →</a>
         </div>
 
       </div>
